move image picker to a component

--- a/meson.build
+++ b/meson.build
@@ -23,8 +23,9 @@ resource_data = files(
 )
 
 main_files = files([
-    'ui/gtkdeck.c',
-    'ui/deck_grid.c'
+  'ui/gtkdeck.c',
+  'ui/deck_grid.c',
+  'ui/image_picker.c'
 ])
 
 main_includes = include_directories('streamdeck')
