--- a/libobsws/meson.build
+++ b/libobsws/meson.build
@@ -1,3 +1,5 @@
+subdir('libuwsc')
+
 libobsws = static_library(
     'libobsws',
     sources: files(['libobsws.c']),
@@ -6,6 +8,6 @@ libobsws = static_library(
 
 libobsws_dep = declare_dependency(
   include_directories: include_directories('.'),
-  dependencies: gtkdeps,
+  dependencies: gtkdeps + [uws_dep],
   link_with: libobsws,
 )
