--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -5,8 +5,9 @@ data_dir = join_paths(source_root, '.')
 assets_dir = join_paths(source_root, 'assets')
 
 subdir('system_plugin')
+subdir('obs_plugin')
 
-dependencies = gtkdeps + [system_plugin_dep]
+dependencies = gtkdeps + [system_plugin_dep, obs_plugin_dep]
 
 resource_data = files(
   'assets/icons8-text-72.png',
