add obs webservice support

--- a/libobsws/meson.build
+++ b/libobsws/meson.build
@@ -1,13 +1,11 @@
-subdir('libuwsc')
-
 libobsws = static_library(
     'libobsws',
-    sources: files(['libobsws.c']),
+    sources: files(['libobsws.c', 'http_parser.c', 'wic.c', 'transport.c']),
     dependencies : gtkdeps
 )
 
 libobsws_dep = declare_dependency(
   include_directories: include_directories('.'),
-  dependencies: gtkdeps + [uws_dep],
+  dependencies: gtkdeps,
   link_with: libobsws,
 )
