--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -42,11 +42,12 @@ jobs:
         # Prefix the list here with "+" to use these queries and those in the config file.
         # queries: ./path/to/local/query, your-org/your-repo/queries@main
 
-    # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
-    # If this step fails, then you should remove it and run the build manually (see below)
+    - name: Install Deps
+    - run: |
+      sudo apt install xvkbd meson libhidapi-dev libhidapi-libusb0 libgtk-3-dev libev-dev libjson-glib-dev
+
     - name: Build
       run: |
-        apt install xvkbd meson libhidapi-dev libhidapi-libusb0 libgtk-3-dev libev-dev libjson-glib-dev
         meson setup _build
         ninja -C _build
 
